--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
                 <h3 class="details-h3" data-en="Colour palette" data-uk="Палітра кольорів">Colour palette</h3>
 
                 <div class="color-boxes">
-                    <div class="color-box" style="background-image: url('color1.jpg');"></div>
-                    <div class="color-box" style="background-image: url('color2.jpg');"></div>
-                    <div class="color-box" style="background-image: url('color3.jpg');"></div>
-                    <div class="color-box" style="background-image: url('color7.jpg');"></div>
-                    <div class="color-box" style="background-image: url('color4.jpg');"></div>
-                    <div class="color-box" style="background-image: url('color6.jpg');"></div>
+                    <div class="color-box" style="background-image: url('/color1.jpg');"></div>
+                    <div class="color-box" style="background-image: url('/color2.jpg');"></div>
+                    <div class="color-box" style="background-image: url('/color3.jpg');"></div>
+                    <div class="color-box" style="background-image: url('/color7.jpg');"></div>
+                    <div class="color-box" style="background-image: url('/color4.jpg');"></div>
+                    <div class="color-box" style="background-image: url('/color6.jpg');"></div>
                 </div>
                 <div class="exclude-section">
                     <div class="white-box"></div>
