--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar">
             <ul class="nav-menu">
-                <li><a href="#details" id="details-links" data-en="Details" data-uk="Деталі">Detail</a></li>
+                <li><a href="#details" id="details-links" data-en="Details" data-uk="Деталі">Details</a></li>
                 <li><a href="#itinerary" id="info-links" data-en="Itinerary" data-uk="План">Itinerary</a></li>
                 <li class="title">N & K</li>
                 <li><a href="#venue" id="venue-links" data-en="Venue" data-uk="Локація">Venue</a></li>
